--- a/assets/settings.json
+++ b/assets/settings.json
@@ -1,5 +1,5 @@
 {
-  "name": "Falcon-Api",
+  "name": "HanzXD-Api",
   "version": "v2.0",
   "description": "simple and powerful tools API and easy to use",
   "bannerImage": "/assets/banner.jpg",
@@ -7,9 +7,9 @@
     "status": "Online!"
   },
   "apiSettings": {
-    "creator": "FlowFalcon",
+    "creator": "HanzXD",
     "apikey": [
-      "falcon-api"
+      "hanzxd-api"
     ]
   },
   "categories": [
